--- a/Client/src/index.css
+++ b/Client/src/index.css
@@ -16,6 +16,20 @@
   --foreground: white;
   --primary: #0cf;
 }
+::-webkit-scrollbar {
+  width: 7px;
+  height: 5px;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: rgb(102, 118, 240);
+  border-radius: 10px;
+  height: 200px;
+}
+
+::-webkit-scrollbar-track {
+  background-color: transparent;
+}
 
 * {
   font-family: 'Inter', sans-serif;
